# FastAPI

./: .dockerignore  .env  .env.docker  .env.example  .env.tornado  Dockerfile  GENERIC_VERSION_SUMMARY.md  LIBRARY_SUMMARY.md  LIBRARY_USAGE.md  LICENSE  MANIFEST.in  OPENAPI_SUMMARY.md  PACKAGE_README.md  QUICKSTART_GENERIC.md  QUICKSTART_LIBRARY.md  README.md  a.bat  alembic.ini  api总览.md  celery_app.py  current_openapi.json  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  openapi.json  openapi_schema.json  publish_library.py  pyproject.toml  pytest.ini  query_redis_inventory.py  requirements.txt  run_tests.py  run_tornado.py  setup.py  stress_test.py  test_app.py  test_generic.py  tornado_server.py  verify_generic.py  (+1 more)
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_warehouse_support.py  f7d3a84be1ff_initial_tables.py
app/: init_data.py  main.py
app/core/: aspects.py  config.py  dependencies.py  kafka_producer.py  model_configs.json  model_factory.py  redis.py  security.py  structured_logging.py
app/db/: session.py
app/jobs/: manual_cleanup.py
app/models/: idempotency_keys.py  inventory_logs.py  inventory_reservations.py  product.py  product_stocks.py
app/routers/: inventory_adjustment.py  inventory_batch.py  inventory_logs.py  inventory_operations.py  inventory_query.py  inventory_router.py  perf_router.py  system_monitor.py
app/schemas/: base.py  inventory.py  inventory_api.py  order.py
app/services/: __init__.py  bloom_filter.py  generic_inventory_service.py  inventory_cache.py  inventory_log.py  inventory_operation.py  inventory_query.py  inventory_reservation.py  inventory_service.py  inventory_sync.py  kafka_consumer.py
docs/: 500 错误修复经验总结.md  ARCHITECTURE_EVOLUTION.md  CONCURRENCY_FIX_SUMMARY.md  DOCKER_DEPLOYMENT.md  Docker部署配置经验.md  HEALTH_CHECK_GUIDE.md  PERFORMANCE_TESTING.md  PERFORMANCE_TEST_GUIDE.md  PERFORMANCE_TEST_REPORT.md  PostgreSQL_Alembic自增主键问题解决方案.md  QUICKSTART.md  QUICK_REFERENCE.md  api总览.md  wrk 性能测试报告.md  代码重构总结-AOP 切面.md  前端调用指南.md  库存服务性能优化技术文档.md  技术文档.md  服务层 AOP 切面使用指南.md  架构图  端口占用自动切换说明.md  行级锁与分布式锁选择说明.md  通用版本配置指南.md  高并发配置指南.md
examples/: generic_usage.py  library_usage_examples.py
inventory_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasks/: inventory_tasks.py
tests/: __init__.py  api_perf_test.py  conftest.py  perf_test.py  test_app.py  test_celery_tasks.py  test_dependencies.py  test_inventory_router.py  test_inventory_service.py  test_models.py
