[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-service"
version = "1.0.0"
description = "专业的库存管理微服务库，支持高并发环境下的库存安全管理"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "库存微服务团队", email = "inventory@example.com"},
]
keywords = [
    "inventory",
    "microservice",
    "fastapi",
    "redis",
    "kafka",
    "sqlalchemy",
    "celery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database :: Database Engines/Servers",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httptools>=0.6.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "bloom-filter2>=2.0.0",
    "aiokafka>=0.10.0",
    "hiredis>=2.2.0",
    "celery>=5.3.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]
docker = [
    "docker>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/inventory-service"
Documentation = "https://github.com/your-org/inventory-service/docs"
Repository = "https://github.com/your-org/inventory-service"
Bug-Tracker = "https://github.com/your-org/inventory-service/issues"

[project.scripts]
inventory-server = "app.main:main"
inventory-init = "app.init_data:init_cli"

[tool.setuptools.packages.find]
include = ["app*", "tasks*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"app.core" = ["*.json"]
"alembic" = ["*.ini", "*.mako"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = [
    "tests",
]
